# compliant_cfn_hooks

./: .gitignore  Makefile  README.md  configure-hook.sh  hook-role.yaml  mycompany-testing-mytesthook-configuration.json  mycompany-testing-mytesthook.json  pyproject.toml  template.yml
docs/: README.md
src/mycompany_testing_mytesthook/: handlers.py  models.py  test_handlers.py
src/mycompany_testing_mytesthook/target_models/: aws_s3_bucket.py
