[tool.poetry]
name = "compliant-cfn-hooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU GENERAL PUBLIC LICENSE version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cloudformation-cli-python-lib = "^2.1.18"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']